First push - trivial spelling changes.

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,6 @@
 <h1>Welcome to Joystick Junction - A Gaming Marketplace</h1>
     <p>
-        Lisitngs Will Go Here
+        Listings Will Go Here
         This will also offer to sign up if user is not signed up
     </p>
     
