--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
         <nav>
             <div class="btn-group" style="width:100%">
                 <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/'">Homepage</button>
-                <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/listings'">Lisitngs</button>
+                <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/listings'">Listings</button>
                 <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/account'">Account</button>
                 <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/aboutUs'">About Us</button>
             </div>
