--- a/views/listings.handlebars
+++ b/views/listings.handlebars
@@ -1,4 +1,4 @@
 <h1>Listings Station</h1>
     <p>
-        Lisitngs Will Go Here and there will be forms for filters and everything like that
-    </p>
+        Listings Will Go Here and there will be forms for filters and everything like that
+    </p> 
