Users are now in database and I changed users.js to make only abbreviated states valid

--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -27,7 +27,7 @@
                 <input id="confirmPasswordInput" type="password" name="confirmPasswordInput"><br>
 
                 <label for="DOBInput">Date of Birth:</label>
-                <input id="DOBInput" type="text" name="DOBInput"><br>
+                <input id="DOBInput" type="date" name="DOBInput" placeholder="YYYY-MM-DD"><br>
                 
                 <label for="cityInput">City:</label>
                 <input id="cityInput" type="text" name="cityInput"><br>
