loginCheck should be fine

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,9 +4,9 @@
         </div>
         <div>
             <form action="/login" method="POST" id="login-form">
-                <label for="emailAddressInput">Enter Your Username:</label>
-                <input id="emailAddressInput" type="email" name="UsernameInput" ><br>
-                <label for="passwordInput">Enter Your Pasword:</label>
+                <label for="usernameInput">Enter Your Username:</label>
+                <input id="usernameInput" type="text" name="usernameInput" ><br>
+                <label for="passwordInput">Enter Your Password:</label>
                 <input id="passwordInput" type="password" name="passwordInput" ><br>
                 <button type="submit">Log in</button>
             </form>
