Signup route can be done, error checking should be good!

--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -39,3 +39,12 @@
             </form>
            <a href="http://localhost:3000/login">Already have an account? Click here to log-in</a>
         </div>
+    <p id="errorFirstName" hidden></p>
+    <p id="errorLastName" hidden></p>
+    <p id="errorEmail" hidden></p>
+    <p id="errorUsername" hidden></p>
+    <p id="errorPassword" hidden></p>
+    <p id="errorConfirm" hidden></p>
+    <p id="errorCity" hidden></p>
+    <p id="errorState" hidden></p>
+    <script src="../public/js/createAccountCheck.js"></script>
