--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,5 +10,5 @@
                 <input id="passwordInput" type="password" name="passwordInput" ><br>
                 <button type="submit">Log in</button>
             </form>
-            <a href="http://localhost:3000/register">Click here to register!</a>
+            <a href="http://localhost:3000/signup">Click here to register!</a>
         </div>
