Added true DOB validation

--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -1,4 +1,4 @@
-<h1>User registration</h1>
+<h1>Create Profile</h1>
         <div id="error">
             {{#if error}}
             <p>{{error}}</p>
@@ -97,6 +97,7 @@
     <p id="errorUsername" hidden></p>
     <p id="errorPassword" hidden></p>
     <p id="errorConfirm" hidden></p>
+    <p id="errorDOB" hidden></p>
     <p id="errorCity" hidden></p>
     <p id="errorState" hidden></p>
     <script src="../public/js/createAccountCheck.js"></script>
