--- a/views/transaction.handlebars
+++ b/views/transaction.handlebars
@@ -1,7 +1,7 @@
 <h1>Checkout Here</h1>
 
 <h3>Shipping Info:</h3>
-<form>
+<form action="/transaction" method="POST" id="address-form">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br>
@@ -14,8 +14,62 @@
     <label for="city">City:</label>
     <input type="text" id="city" name="city" required>
     <br>
+    <label for="state">State:</label>
+      <select id="state" name="state" required>
+          <option value="">Select a state</option>
+          <option value="AL">AL</option>
+          <option value="AK">AK</option>
+          <option value="AZ">AZ</option>
+          <option value="AR">AR</option>
+          <option value="CA">CA</option>
+          <option value="CO">CO</option>
+          <option value="CT">CT</option>
+          <option value="DE">DE</option>
+          <option value="FL">FL</option>
+          <option value="GA">GA</option>
+          <option value="HI">HI</option>
+          <option value="ID">ID</option>
+          <option value="IL">IL</option>
+          <option value="IN">IN</option>
+          <option value="IA">IA</option>
+          <option value="KS">KS</option>
+          <option value="KY">KY</option>
+          <option value="LA">LA</option>
+          <option value="ME">ME</option>
+          <option value="MD">MD</option>
+          <option value="MA">MA</option>
+          <option value="MI">MI</option>
+          <option value="MN">MN</option>
+          <option value="MS">MS</option>
+          <option value="MO">MO</option>
+          <option value="MT">MT</option>
+          <option value="NE">NE</option>
+          <option value="NV">NV</option>
+          <option value="NH">NH</option>
+          <option value="NJ">NJ</option>
+          <option value="NM">NM</option>
+          <option value="NY">NY</option>
+          <option value="NC">NC</option>
+          <option value="ND">ND</option>
+          <option value="OH">OH</option>
+          <option value="OK">OK</option>
+          <option value="OR">OR</option>
+          <option value="PA">PA</option>
+          <option value="RI">RI</option>
+          <option value="SC">SC</option>
+          <option value="SD">SD</option>
+          <option value="TN">TN</option>
+          <option value="TX">TX</option>
+          <option value="UT">UT</option>
+          <option value="VT">VT</option>
+          <option value="VA">VA</option>
+          <option value="WA">WA</option>
+          <option value="WV">WV</option>
+          <option value="WI">WI</option>
+          <option value="WY">WY</option>
+      </select><br>
     <label for="zip">ZIP Code:</label>
-    <input type="text" id="zip" name="zip" required>
+    <input type="text" id="zip" name="zip" placeholder="Input 5 digit zipcode" required>
     <br>
     <label for="country">Country:</label>
     <select id="country" name="country" required>
@@ -25,6 +79,14 @@
     <br>
     <input type="submit" value="Approve Address">
 </form>
+<p id="errorName" hidden></p>
+<p id="errorEmail" hidden></p>
+<p id="errorAddress" hidden></p>
+<p id="errorCity" hidden></p>
+<p id="errorZip" hidden></p>
+<p id="errorCountry" hidden></p>
+<p id="errorMissings" hidden></p>
+<p id="errorState" hidden></p>
 
 <br>
 
