Added a basic comments function plus some seed for comments

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,6 +1,8 @@
 <h1>Welcome to Joystick Junction - A Gaming Marketplace</h1>
     <p>
-        Listings Will Go Here
-        This will also offer to sign up if user is not signed up
+        Welcome to Joystick Junction!
     </p>
+    <a href="/signup">Click here to log in</a>
+    <br>
+    <a href="/login">Click here to sign up</a>
     
