--- a/views/transaction.handlebars
+++ b/views/transaction.handlebars
@@ -91,14 +91,14 @@
 <br>
 
 <h3>Credit Card Information:</h3>
-<form>
+<form action="/transaction" method="POST" id="payment-form">
     <label for="cardholder">Cardholder Name:</label>
     <input type="text" id="cardholder" name="cardholder" required>
     <br>
     <label for="cardnumber">Card Number:</label>
     <input type="text" id="cardnumber" name="cardnumber" required>
     <br>
-    <label for="expiry">Expiration Date:</label>
+    <label for="expiration">Expiration Date:</label>
     <input type="text" id="expiration" name="expiration" placeholder="MM/YY" required>
     <br>
     <label for="cvv">CVV:</label>
@@ -106,6 +106,11 @@
     <br>
     <input type="submit" value="Submit Payment">
 </form>
+<p id="errorCardholder" hidden></p>
+<p id="errorCardnumber" hidden></p>
+<p id="errorExpiration" hidden></p>
+<p id="errorCvv" hidden></p>
+
 <br>
 <img id='creditCard' alt="Credit Cards" src="{{pic}}">
 
