--- a/views/createAccount.handlebars
+++ b/views/createAccount.handlebars
@@ -87,6 +87,10 @@
                     <option value="WY">WY</option>
                 </select><br>
 
+                <label for="bioInput">Biography:</label>
+                <br>
+                <textarea id="bioInput" name="bioInput" rows="10" columns="20" placeholder="This field is optional"></textarea>
+                <br>
                 <button type="submit">Register</button>
             </form>
            <a href="http://localhost:3000/login">Already have an account? Click here to log-in</a>
@@ -100,4 +104,5 @@
     <p id="errorDOB" hidden></p>
     <p id="errorCity" hidden></p>
     <p id="errorState" hidden></p>
+    <p id="errorBio" hidden></p>
     <script src="../public/js/createAccountCheck.js"></script>
