--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
     <p>
         Welcome to Joystick Junction!
     </p>
-    <a href="/signup">Click here to log in</a>
+    <a href="/signup">Click here to sign up</a>
     <br>
-    <a href="/login">Click here to sign up</a>
+    <a href="/login">Click here to log in</a>
     
