--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -19,5 +19,12 @@
 {{else}}
     <h3>No Comments</h3>
 {{/if}}
-
+<p id="errorComment" hidden></p>
+<form method="POST" id="comment-form" action="">
+<label for="commentInput">Leave a comment:</label>
+ <textarea id="commentInput" type="text" name="commentInput"></textarea><br>
+ <div id="ListingId" value="{{listings._id}}"></div>
+  <button type="submit">Submit</button>
+ </form>
+<script src="../public/js/commemtCheck.js"></script>
                         
