--- a/views/createListing.handlebars
+++ b/views/createListing.handlebars
@@ -7,7 +7,15 @@
             {{/if}}
         </div>
         <div>
-            <form method="POST" id="registration-form" action="">
+            <form method="POST" id="listing-form" action="">
+
+                <label for="listingTypeInput">Listing type:</label>
+                <select id="listingTypeInput" name="listingTypeInput" required>
+                    <option value="">Select a state</option>
+                    <option value="Buy">Buying</option>
+                    <option value="Sell">Selling</option>
+                </select>
+
                 <label for="TitleInput">Listing Title:</label>
                 <input id="TitleInput" type="text" name="TitleInput"><br>
 
@@ -32,3 +40,4 @@
                 <button type="submit">Register</button>
             </form>
         </div>
+        <script src="../public/js/listingCheck.js"></script>
