Rerouted create listing

--- a/views/accountInfo.handlebars
+++ b/views/accountInfo.handlebars
@@ -32,4 +32,4 @@
     </div>
     
 
-    <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/createListing'">Create Listing</button>
+    <button style="width:25%" onclick="window.location.href = 'http://localhost:3000/PriceChartSearch'">Create Listing</button>
