--- a/views/sellingListings.handlebars
+++ b/views/sellingListings.handlebars
@@ -6,6 +6,8 @@
                 <div>
                 <img alt="img" src="{{img}}"><br>
                 </div>
+                <p class="item">Listing Creator: {{user.username}}</p>
+                <p class="item">User Rating: {{rating}}
                 <p class="item">Condition: {{listing.mainCondition}}</p>
                 <p class="item">Description: {{listing.description}}</p>
                 <p class="item">Price: ${{listing.price}}</p>
