made transactions actually happen

--- a/views/listingsById.handlebars
+++ b/views/listingsById.handlebars
@@ -53,7 +53,7 @@
                 </div><br>
 </div>
 <div class="btn-group">
-<button class="purchase" onclick="window.location.href = 'http://localhost:3000/transaction'">{{type}}</button>
+<button class="purchase" onclick="window.location.href = 'http://localhost:3000/transaction/{{listings._id}}'">{{type}}</button>
 </div>
 {{#if listings.comments}}
     <h3>Comments</h3>
