--- a/views/transaction.handlebars
+++ b/views/transaction.handlebars
@@ -1,7 +1,7 @@
 <h1>Checkout Here</h1>
 
 <h3>Shipping Info:</h3>
-<form action="/transaction" method="POST" id="address-form">
+<form action="{{link}}" method="POST" id="address-form">
     <label for="name">Name:</label>
     <input type="text" id="name" name="name" required>
     <br>
