Added a basic template to tradeCheck.js (INCOMPLETE)

--- a/views/trade.handlebars
+++ b/views/trade.handlebars
@@ -49,6 +49,14 @@
 
 
     <label for="descriptionInput">Description:</label>
-    <textarea id="descriptionInput" type="text" name="descriptionInput"></textarea><br><br>
-    
+    <textarea id="descriptionInput" type="text" name="descriptionInput"></textarea><br><br>    
 </form>
+
+<p id="errorTitle" hidden></p>
+<p id="errorMainCond" hidden></p>
+<p id="errorSecCond" hidden></p>
+<p id="errorPrice" hidden></p>
+<p id="errorShipPrice" hidden></p>
+<p id="errorDesc" hidden></p>
+<p id="errorRetPol" hidden></p>
+<p id="errorImgs" hidden></p>
